cmps104a/asg4/test/96-unterminated.str
stringset[   1]:     831242270113464010: 0x1c4b498->"t"
stringset[   2]:   13497578857207247412: 0x1c4b448->"string"
stringset[   3]:    3663726644998027833: 0x1c50178->"abc"
                    5344662657899890615: 0x1c4ffe8->";"
                    6637313742931709005: 0x1c4fcb8->"*"
                   11597697714117577063: 0x1c4b4e8->"="
stringset[   4]:   14168603451105147218: 0x1c50808->"23"
                   14162235402040553372: 0x1c4b8c8->"23foobar;"
                   10959529184379665549: 0x1c4b678->"c"
stringset[   6]:   10818588730159184021: 0x1c50358->"'"
                    7128341810318723457: 0x1c4b718->""abcd\";"
stringset[   7]:    6274210351723102623: 0x1c4b538->""\*/";"
stringset[   9]:     342363981814211588: 0x1c4b628->"char"
stringset[  13]:    1006047371904342835: 0x1c508a8->"foobar"
stringset[  14]:   16030370620903852840: 0x1c50588->"abcd"
                    6414370376350317282: 0x1c4b588->"s"
stringset[  15]:   12865648880272446602: 0x1c4b018->"/"
stringset[  17]:    4993892634952068459: 0x1c503f8->"a"
stringset[  18]:   13863130522027473470: 0x1c4b5d8->""abc;"
stringset[  20]:   11980149856480239217: 0x1c4b768->""abc|;"
stringset[  21]:   12597418120160561823: 0x1c4b878->"int"
                   15106541837140835242: 0x1c4b6c8->"'a;"
load_factor = 0.957
bucket_count = 23
max_bucket_size = 4
